Set up email notification using yagmail

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/client_secret_1097203586936-1spn72t38cco4qf3mmm5vbl3d1haj4o8.apps.googleusercontent.com.json
